8231667: Shenandoah: Full GC should take empty regions into slices for compaction

Reviewed-by: rkennke